Fix issue with alignment of elements.

--- a/src/components/Popup/GiveUp/index.css
+++ b/src/components/Popup/GiveUp/index.css
@@ -1,5 +1,10 @@
 .PopupGiveUp {
   max-width: 340px;
+
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  justify-content: center;
 }
 
 .PopupGiveUp-information {
