--- a/src/components/Popup/NoMoves/index.css
+++ b/src/components/Popup/NoMoves/index.css
@@ -1,5 +1,10 @@
 .PopupNoMoves {
   max-width: 340px;
+
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  justify-content: center;
 }
 
 .PopupNoMoves-information {
